Header, Footer and initial routing. CONFIG_DB as angular constant.

--- a/main/static/src/script/app/components/welcome/welcome.html
+++ b/main/static/src/script/app/components/welcome/welcome.html
@@ -1,15 +1,13 @@
-# extends 'base.html'
-
-# block header
-  <div class="jumbotron">
-    <div class="container">
-      <h1>{{config.CONFIG_DB.brand_name}}</h1>
-      <p>Hello, world!</p>
-    </div>
+<!-- welcomeController as welcome -->
+<div class="jumbotron">
+  <div class="container">
+    <h1>{{welcome.CONFIG_DB.brand_name}}</h1>
+    <p>Hello, world!</p>
   </div>
-# endblock
+</div>
 
-# block content
+
+<div class="container">
   <div class="row">
     <div class="col-sm-6 col-md-4 col-lg-3">
       <h2>Heading</h2>
@@ -28,4 +26,4 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
   </div>
-# endblock
+</div>
