--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -14,19 +14,10 @@
     # include 'bit/analytics.html'
   </head>
 
-  <body>
-    # include 'bit/header.html'
-    # include 'bit/announcement.html'
-    # block header
-    # endblock
-    <div class="container">
-      # include 'bit/notifications.html'
-      # block content
-      # endblock
-    </div>
-    # include 'bit/footer.html'
+  <body ng-app="app">
+    <div app-header></div>
+    <div ng-view></div>
+    <div app-footer></div>
     # include 'bit/script.html'
-    # block scripts
-    # endblock
   </body>
 </html>
