--- a/main/templates/bit/script.html
+++ b/main/templates/bit/script.html
@@ -2,25 +2,23 @@
 # if config.DEVELOPMENT
   <script src="http://{{request.host.split(':')[0]}}:35729/livereload.js"></script>
   <!-- ext:js -->
-  <script src="/p/build/ext/jquery/dist/jquery.js"></script>
+  <script src="/p/build/ext/angular/angular.js"></script>
+  <script src="/p/build/ext/angular-route/angular-route.js"></script>
   <script src="/p/build/ext/moment/moment.js"></script>
-  <script src="/p/build/ext/nprogress/nprogress.js"></script>
-  <script src="/p/build/ext/bootstrap/js/alert.js"></script>
-  <script src="/p/build/ext/bootstrap/js/button.js"></script>
-  <script src="/p/build/ext/bootstrap/js/transition.js"></script>
-  <script src="/p/build/ext/bootstrap/js/collapse.js"></script>
-  <script src="/p/build/ext/bootstrap/js/dropdown.js"></script>
-  <script src="/p/build/ext/bootstrap/js/tooltip.js"></script>
   <!-- endinject -->
   <!-- script:js -->
-  <script src="/p/build/script/common/api.js"></script>
-  <script src="/p/build/script/common/util.js"></script>
-  <script src="/p/build/script/site/admin.js"></script>
-  <script src="/p/build/script/site/auth.js"></script>
-  <script src="/p/build/script/site/user.js"></script>
-  <script src="/p/build/script/site/app.js"></script>
+  <script src="/p/build/script/app/app.js"></script>
+  <script src="/p/build/script/app/shared/header/header.js"></script>
+  <script src="/p/build/script/app/shared/footer/footer.js"></script>
+  <script src="/p/build/script/app/components/welcome/welcome_ctrl.js"></script>
+  <script src="/p/build/script/app/components/feedback/feedback_ctrl.js"></script>
+  <script src="/p/build/script/app/templates.js"></script>
   <!-- endinject -->
 # else
   <script src="/p/min/script/ext.js?{{config.CURRENT_VERSION_ID}}"></script>
   <script src="/p/min/script/script.js?{{config.CURRENT_VERSION_ID}}"></script>
 # endif
+
+<script type="text/javascript">
+  angular.module('app').constant('CONFIG_DB', JSON.parse({{config_db|tojson}}));
+</script>
