--- a/main/templates/bit/script.html
+++ b/main/templates/bit/script.html
@@ -25,6 +25,7 @@
   <script src="/p/build/script/app/shared/footer/footer.js"></script>
   <script src="/p/build/script/app/components/welcome/welcome_ctrl.js"></script>
   <script src="/p/build/script/app/components/feedback/feedback_ctrl.js"></script>
+  <script src="/p/build/script/app/components/auth/auth_ctrl.js"></script>
   <script src="/p/build/script/app/templates.js"></script>
   <!-- endinject -->
 # else
