Added flask util for paths in js

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -19,6 +19,7 @@
     <div app-header></div>
     <div ng-view></div>
     <div app-footer></div>
+    {{flask_util_js.js}}
     # include 'bit/script.html'
   </body>
 </html>
