Angular isolated under /ang

--- a/main/static/src/script/app/components/welcome/welcome.html
+++ b/main/static/src/script/app/components/welcome/welcome.html
@@ -2,7 +2,7 @@
 <div class="jumbotron">
   <div class="container">
     <h1>{{welcome.CONFIG_DB.brand_name}}</h1>
-    <p>Hello, world!</p>
+    <p>Hello, Angular world!</p>
   </div>
 </div>
 
