Progress on TF-40, web service to collect and present the data collected from the timers and their specifics, different type of runs, along with different os, are supported.

--- a/main/templates/bit/header.html
+++ b/main/templates/bit/header.html
@@ -11,6 +11,9 @@
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
+        <li class="{{'active' if html_class == 'run-list'}}">
+          <a href="{{url_for('run_list')}}"><span class="fa fa-fw fa-play-circle"></span> Run List</a>
+        </li>
         # include 'bit/contact_menu.html'
       </ul>
       <ul class="nav navbar-nav navbar-right">
