--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -9,6 +9,7 @@
       {{config.CONFIG_DB.brand_name}}
     </title>
     # include 'bit/style.html'
+    <!-- TODO: Block head might not be needed. -->
     # block head
     # endblock
     # include 'bit/analytics.html'
@@ -16,9 +17,9 @@
   </head>
 
   <body ng-app="app">
-    <div app-header></div>
+    <app-header></app-header>
     <div ng-view></div>
-    <div app-footer></div>
+    <app-footer></app-footer>
     {{flask_util_js.js}}
     # include 'bit/script.html'
   </body>
