--- a/main/templates/bit/script.html
+++ b/main/templates/bit/script.html
@@ -1,8 +1,10 @@
-<script type="text/javascript" id="config-db">
-  // When angular copies these values it removes em from window obj.
-  window.flask_data = {};
+<script type="text/javascript">
+  # if user_db
+    window.user_db = JSON.parse('{{user_db|tojson}}');
+  # endif
+
   # if config_db
-    window.flask_data.config_db = JSON.parse('{{config_db|tojson}}');
+    window.config_db = JSON.parse('{{config_db|tojson}}');
   # endif
 </script>
 
