Implemented stand alone signing page, google signing works as first approach.

--- a/main/static/src/script/app/components/feedback/feedback.html
+++ b/main/static/src/script/app/components/feedback/feedback.html
@@ -22,9 +22,9 @@
           <input  ng-model="feedback.email" class="form-control" id="email" name="email" type="email">
         </div>
 
-        <button ng-click="feedback.send()" class="btn btn-primary btn-block">
+        <a href ng-click="feedback.send()" class="btn btn-primary btn-block">
           Send Feedback
-        </button>
+        </a>
       </form>
 
     </div>
