--- a/main/static/src/script/app/components/welcome/welcome.html
+++ b/main/static/src/script/app/components/welcome/welcome.html
@@ -10,6 +10,9 @@
         <span class="fa fa-fw fa-user"></span> Hello,
         <strong>{{welcome.authService.userDB.name}}</strong>!!
       </span>
+      <a href="/signin" class="btn btn-lg btn-primary" ng-if="!welcome.authService.userDB">
+        Sign In
+      </a>
     </h1>
   </div>
 </div>
