--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -16,6 +16,7 @@
 
   <body ng-app="app">
     <app-header></app-header>
+    <app-notify></app-notify>
     <div class="container">
       <div ng-view></div>
     </div>
