--- a/main/static/src/script/app/components/admin/admin.html
+++ b/main/static/src/script/app/components/admin/admin.html
@@ -1,13 +1,17 @@
 
-<div class="page-header"  ng-repeat-start="entry in admin.items">
-  <h1>{{entry.title}}</h1>
-</div>
+<un-authorized is-admin="admin.authService.userDB.admin"></un-authorized>
 
-<div class="row text-center" ng-repeat-end>
-  <div ng-repeat="link in entry.links" class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
-    <a ng-href="{{link.url}}" target="{{link.target}}" class="text-muted">
-      <h4><span class="fa fa-fw fa-3x fa-{{link.icon}}"></span></h4>
-      <h4 class="ellipsis">{{link.title}}</h4>
-    </a>
+<section ng-if="admin.authService.userDB.admin">
+  <div class="page-header"  ng-repeat-start="entry in admin.items">
+    <h1>{{entry.title}}</h1>
   </div>
-</div>
+
+  <div class="row text-center" ng-repeat-end>
+    <div ng-repeat="link in entry.links" class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+      <a ng-href="{{link.url}}" target="{{link.target}}" class="text-muted">
+        <h4><span class="fa fa-fw fa-3x fa-{{link.icon}}"></span></h4>
+        <h4 class="ellipsis">{{link.title}}</h4>
+      </a>
+    </div>
+  </div>
+</section>
