--- a/main/static/src/script/app/components/admin/config/config.html
+++ b/main/static/src/script/app/components/admin/config/config.html
@@ -1,41 +1,44 @@
+<un-authorized is-admin="config.authService.userDB.admin"></un-authorized>
 
-<div class="page-header">
-  <h1>
-    <small>
-      <a ng-href="{{admin.prefix}}" class="text-muted" title="{{title}}"><span class="fa fa-fw fa-chevron-left"></span></a>
-    </small>
-    Admin Config
-  </h1>
+<section ng-if="config.authService.userDB.admin">
+  <div class="page-header">
+    <h1>
+      <small>
+        <a href="/admin" class="text-muted" title="{{title}}"><span class="fa fa-fw fa-chevron-left"></span></a>
+      </small>
+      App Config
+    </h1>
 
-  <p class="text-muted">
-    For most of the settings to be applied for everyone, you will
-    <a ng-href="https://console.developers.google.com/project/{{admin.CONFIG_DB.APPLICATION_ID}}/appengine/instances?moduleId=default&versionId={{admin.CONFIG_DB.APPLICATION_ID}}" target="_blank">
-      have to restart
-    </a> the <a href="https://developers.google.com/appengine/docs/adminconsole/instances" target="_blank">instances</a>.
-  </p>
-</div>
+    <p class="text-muted">
+      For most of the settings to be applied for everyone, you will
+      <a ng-href="https://console.developers.google.com/project/{{config.configDB.APPLICATION_ID}}/appengine/instances?moduleId=default&versionId={{config.configDB.APPLICATION_ID}}" target="_blank">
+        have to restart
+      </a> the <a href="https://developers.google.com/appengine/docs/adminconsole/instances" target="_blank">instances</a>.
+    </p>
+  </div>
 
-<form novalidate>
-  <div class="row">
-    <fieldset class="col-sm-6">
-      <div class="form-group">
-        <label class="control-label" for="brand_name">Brand Name</label>
-        <input ng-model="admin.CONFIG_DB.brand_name" id="brand_name" name="brand_name" class="form-control" type="text">
-      </div>
+  <form ng-submit="config.submitConfig()" novalidate>
+    <div class="row">
+      <fieldset class="col-sm-6">
+        <div class="form-group">
+          <label class="control-label" for="brand_name">Brand Name</label>
+          <input ng-model="config.configDB.brand_name" id="brand_name" name="brand_name" class="form-control" type="text">
+        </div>
 
-      <div class="form-group">
-        <label class="control-label" for="feedback_email">Feedback Email</label>
-        <small class="text-muted">(optional)</small>
-        <input ng-model="admin.CONFIG_DB.feedback_email" id="feedback_email" name="feedback_email" class="form-control" type="text">
-      </div>
+        <div class="form-group">
+          <label class="control-label" for="feedback_email">Feedback Email</label>
+          <small class="text-muted">(optional)</small>
+          <input ng-model="config.configDB.feedback_email" id="feedback_email" name="feedback_email" class="form-control" type="text">
+        </div>
+        
+        <!-- TODO: implement annoucenent feature -->
+        <div class="form-group hide">
+          <label class="control-label" for="announcement_html">Announcement HTML</label>
+          <small class="text-muted">(optional)</small>
+          <textarea ng-model="config.configDB.announcement_html" class="form-control" id="announcement_html" name="announcement_html" rows="4"></textarea>
+        </div>
 
-      <div class="form-group">
-        <label class="control-label" for="announcement_html">Announcement HTML</label>
-        <small class="text-muted">(optional)</small>
-        <textarea ng-model="admin.CONFIG_DB.announcement_html" class="form-control" id="announcement_html" name="announcement_html" rows="4"></textarea>
-      </div>
-
-      <div class="form-group">
+        <div class="form-group hide">
           <label class="control-label" for="announcement_type">Announcement Type</label>
           <small class="text-muted">(optional)</small>
           <select class="form-control" id="announcement_type" name="announcement_type">
@@ -45,52 +48,63 @@
             <option value="danger">Danger</option>
           </select>
         </div>
-    </fieldset>
 
-    <fieldset class="col-sm-6">
-      <div class="checkbox">
-        <label>
-          <input ng-model="admin.CONFIG_DB.notify_on_new_user" name="notify_on_new_user" type="checkbox"> Send an email notification when a user signs up
-        </label>
-      </div>
-      <div class="checkbox">
-        <label>
-          <input ng-model="admin.CONFIG_DB.verify_email" name="verify_email" type="checkbox"> Verify user emails
-        </label>
-      </div>
-      <div class="checkbox">
-        <label>
-          <input ng-model="admin.CONFIG_DB.check_unique_email" name="check_unique_email" type="checkbox"> Check for uniqueness of the verified emails
-        </label>
-      </div>
-      <div class="checkbox">
-        <label>
-          <input ng-model="admin.CONFIG_DB.email_authentication" name="email_authentication" type="checkbox"> Email authentication for sign in/sign up
-        </label>
-      </div>
-      <div class="checkbox">
-        <label>
-          <input ng-model="admin.CONFIG_DB.anonymous_recaptcha" name="anonymous_recaptcha" type="checkbox"> Use reCAPTCHA in forms for unauthorized users
-        </label>
-      </div>
+        <hr>
+        <div class="panel-group">
+          <a ng-href="{{config.editConfigUrl}}" target="_blank" class="btn btn-info btn-block">
+            <span class="fa fa-external-link"></span> Edit Secret Keys in Google Dev Console
+          </a>
+          <h4>
+            available properties
+            <small>
+              flask_secret_key, salt, letsencrypt_challenge, letsencrypt_response
+              recaptcha_public_key, recaptcha_private_key and all the client_id
+              and client_secret for oauth providers
+            </small>
+          </h4>
+        </div>
+      </fieldset>
 
-      <div class="panel-group">
-        <admin-panel template-url="config/panel/security.html"></admin-panel>
-        <admin-panel template-url="config/panel/letsencrypt.html"></admin-panel>
-        <admin-panel template-url="config/panel/google_analytics.html"></admin-panel>
-        <admin-panel template-url="config/panel/recaptcha.html"></admin-panel>
-      </div>
-    </fieldset>
-  </div>
-
-  <hr>
-  
-  <!-- TODO: Connect the submit button with the /api/config ;) -->
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <button type="submit" class="btn btn-primary btn-lg btn-block">
-        Update Config
-      </button>
+      <fieldset class="col-sm-6">
+        <div class="checkbox">
+          <label>
+            <input ng-model="config.configDB.notify_on_new_user" name="notify_on_new_user" type="checkbox"> Send an email notification when a user signs up
+          </label>
+        </div>
+        <div class="checkbox">
+          <label>
+            <input ng-model="config.configDB.verify_email" name="verify_email" type="checkbox"> Verify user emails
+          </label>
+        </div>
+        <div class="checkbox">
+          <label>
+            <input ng-model="config.configDB.check_unique_email" name="check_unique_email" type="checkbox"> Check for uniqueness of the verified emails
+          </label>
+        </div>
+        <div class="checkbox">
+          <label>
+            <input ng-model="config.configDB.email_authentication" name="email_authentication" type="checkbox"> Email authentication for sign in/sign up
+          </label>
+        </div>
+        <div class="checkbox">
+          <label>
+            <input ng-model="config.configDB.anonymous_recaptcha" name="anonymous_recaptcha" type="checkbox"> Use reCAPTCHA in forms for unauthorized users
+          </label>
+        </div>
+        <admin-panel template-url="config/analytics_panel.html"></admin-panel>
+      </fieldset>
     </div>
-  </div>
-</form>
+
+    <hr>
+    
+    <!-- TODO: Connect the submit button with the /api/config ;) -->
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <button type="submit" class="btn btn-primary btn-lg btn-block">
+          Update Config
+        </button>
+      </div>
+    </div>
+  </form>
+
+</section>
