Song list in play end to end.

--- a/main/static/src/script/app/components/welcome/welcome.html
+++ b/main/static/src/script/app/components/welcome/welcome.html
@@ -1,15 +1,15 @@
 
-<div class="jumbotron">
+<div class="jumbotron" ng-if="!welcome.authService.userDB">
   <h1>
-    <span ng-if="!welcome.authService.userDB">
-      <span class="fa fa-fw fa-user-secret"></span> Hello, Anonymous!
-    </span>
-    <span ng-if="welcome.authService.userDB">
-      <span class="fa fa-fw fa-user"></span> Hello,
-      <strong>{{welcome.authService.userDB.name}}</strong>!!
-    </span>
-    <a href="/signin" class="btn btn-lg btn-primary" ng-if="!welcome.authService.userDB">
+    <span class="fa fa-fw fa-user-secret"></span> Hello, Anonymous!
+    <a href="/signin" class="btn btn-lg btn-primary">
       Sign In
     </a>
   </h1>
+</div>
+
+<div class="row" ng-if="welcome.authService.userDB">
+  <div class="col-md-12">
+    <song-list></song-list>
+  </div>
 </div>
