--- a/main/static/src/script/app/components/song/song.html
+++ b/main/static/src/script/app/components/song/song.html
@@ -13,8 +13,6 @@
     <h4><span class="text-muted">Artist</span> {{ctrl.song_db.artist}}</h4>
     <h4><span class="text-muted">Harp type</span> {{ctrl.song_db.harp_type}}</h4>
     <h4><span class="text-muted">Key</span> {{ctrl.song_db.harp_key}}</h4>
-    <pre>
-      {{ctrl.song_db.tab}}
-    </pre>
+    <pre>{{ctrl.song_db.tab}}</pre>
   </div>
 </div>
