--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -14,7 +14,7 @@
     <base href="/">
   </head>
 
-  <body ng-app="app">
+  <body keypress-events ng-app="app">
     <app-header></app-header>
     <app-notify></app-notify>
     <div class="container">
