--- a/main/static/src/script/app/components/song/song.html
+++ b/main/static/src/script/app/components/song/song.html
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <a href="/" class="close-btn pull-right">
+    <a ng-click="ctrl.showList()" class="close-btn pull-right" title="Show list (ESC)">
       <span class="fa fa-times fa-3x"></span>
     </a>
   </div>
