--- a/main/static/src/script/app/components/welcome/welcome.html
+++ b/main/static/src/script/app/components/welcome/welcome.html
@@ -1,6 +1,5 @@
 
 <div class="row">
-  <div class="col-md-12">
-    <song-list></song-list>
-  </div>
+  <song-search></song-search>
+  <song-list></song-list>
 </div>
