--- a/main/static/src/script/app/components/signin/signin.html
+++ b/main/static/src/script/app/components/signin/signin.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-md-offset-3 col-md-6">
+<!--
+    TODO: Implement this form handling in the controller
 
     <form method="POST" action="." novalidate="">
-      <input id="csrf_token" name="csrf_token" type="hidden" value="1457522991##902e4892d2d1f9b7ba113ca0e9d6f5d129e665c4">
-      <input id="next_url" name="next_url" type="hidden" value="https://gae-init.appspot.com/">
       <input class="hide" id="remember" name="remember" type="checkbox" value="y">
       <div class="form-group ">
         <label class="control-label" for="email">Email</label>
@@ -21,7 +21,7 @@
         </span>
       </div>
     </div>
-      
+
     <div class="controls">
       <button type="submit" class="btn btn-block btn-lg btn-primary btn-loading" data-loading-text="<span class='fa fa-spin fa-spinner'></span> Please wait..">
         Sign in
@@ -35,6 +35,8 @@
       </div>
     </form>
     <legend class="text-muted text-center">or</legend>
+ -->
+
     <p class="text-center">
       <a class="btn btn-google btn-social" href="/signin/gae/" title="Sign in with LinkedIn" rel="nofollow" target="_self">
         <span class="fa fa-google"></span> Sign in with Google
