--- a/main/static/src/script/app/components/song/song.html
+++ b/main/static/src/script/app/components/song/song.html
@@ -7,36 +7,29 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-md-6">
-    <h4>
-      <div ng-if="song.isEditable" class="input-group">
-        <span class="input-group-addon">Title</span>
-        <input type="text" class="form-control" value="{{song.song_db.name}}" placeholder="type song title">
-      </div>
+<song-edit ng-if="song.isEditable"></song-edit>
 
-      <span ng-if="!song.isEditable" class="text-muted">Title</span>
-      <span ng-if="!song.isEditable">{{song.song_db.name | titlecase}}</span>
-    </h4>
-    <h4><span class="text-muted">artist</span> {{song.song_db.artist | titlecase}}</h4>
-    <h4><span class="text-muted">harmonica</span> {{song.song_db.harp_type}}  #{{song.song_db.harp_key}}</h4>
+<section ng-if="!song.isEditable">
+  <div class="row">
+    <div class="col-md-6">
+      <h4>
+        <span class="text-muted">Title</span>
+        <span>{{song.song_db.name | titlecase}}</span>
+      </h4>
+      <h4><span class="text-muted">Artist</span> {{song.song_db.artist | titlecase}}</h4>
+      <h4><span class="text-muted">Harmonica</span> {{song.song_db.harp_type}}  #{{song.song_db.harp_key}}</h4>
+    </div>
+
+    <div class="col-md-6">
+      <a ng-if="song.authService.userDB && !song.isEditable" ng-click="song.isEditable = !song.isEditable" class="close-btn pull-right" title="Edit item">
+        <span class="fa fa-pencil fa-2x"></span>
+      </a>
+    </div>
   </div>
 
-  <div class="col-md-6">
-    <a ng-if="song.authService.userDB && !song.isEditable" ng-click="song.isEditable = !song.isEditable" class="close-btn pull-right" title="Edit item">
-      <span class="fa fa-pencil fa-2x"></span>
-    </a>
+  <div class="row">
+    <div class="col-md-6">
+      <pre>{{song.song_db.tab}}</pre>
+    </div>
   </div>
-</div>
-
-<div class="row">
-  <div class="col-md-12">
-    <pre>{{song.song_db.tab}}</pre>
-  </div>
-</div>
-
-<div class="row" ng-if="song.isEditable">
-  <div class="col-md-12">
-    <a href="" class="btn btn-primary">Save</a>
-  </div>
-</div>
+</section>
